--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <p class="text">Was your service delivered on time?</p>
         
             <label>
-            <input type="radio" name="attribute" value="yes, right on time!"> Yes, right on time!</label>
-             <label><input type="radio" name="attribute" value="Could be faster">Could be faster</label>
-              <label><input type="radio" name="attribute" value="A bit late">A bit late</label>
-            <label><input type="radio" name="attribute" value="Delivered too late">Delivered too late</label>
+            <input type="radio" class="radio" name="attribute" value="yes, right on time!"> Yes, right on time!</label>
+             <label><input type="radio" class="radio" name="attribute" value="Could be faster">Could be faster</label>
+              <label><input type="radio" class="radio" name="attribute" value="A bit late">A bit late</label>
+            <label><input type="radio" class="radio" name="attribute" value="Delivered too late">Delivered too late</label>
             </div>
 
         
